# fastapi-base

./: .env.example  pyproject.toml
src/: api.py  config.py  database.py  main.py
src/auth/: controllers.py  models.py  schemas.py  services.py
src/migrations/models/: 1_20230812163059_update.py
